add auto download file script

--- a/.gitignore
+++ b/.gitignore
@@ -559,3 +559,6 @@ dmypy.json
 !/Image-Caption/
 output
 /ImageCaption/
+!/ShowAttendAndTellModel/data/inception_v3.ckpt
+/ShowAttendAndTellModel/model_best/
+/ShowAttendAndTellModel/data/inception_v3.ckpt
