--- a/.gitignore
+++ b/.gitignore
@@ -556,9 +556,10 @@ dmypy.json
 # Pyre type checker
 .pyre/
 
-!/Image-Caption/
 output
-/ImageCaption/
 !/ShowAttendAndTellModel/data/inception_v3.ckpt
 /ShowAttendAndTellModel/model_best/
 /ShowAttendAndTellModel/data/inception_v3.ckpt
+
+*.ckpt
+**/*.ckpt
