--- a/requirements.txt
+++ b/requirements.txt
@@ -1,15 +1,23 @@
-zeroconf>=0.23.0
-numpy>=1.17.4
-tensorflow_gpu>=1.14.0
-waitress>=1.4.3
-opencv_contrib_python>=4.1.1.26
-Flask>=1.1.1
-Pillow>=7.0.0
-tensorflow==2.1.0
-matplotlib
-scipy
-scikit-image
-hickle
-six
-
-
+imutils==0.5.3
+mss==5.0.0
+flask_opencv_streamer==1.4
+numpy==1.18.1
+opencv_contrib_python==4.2.0.32
+zeroconf==0.27.1
+ifaddr==0.1.6
+requests==2.23.0
+PyGLM==1.1.8
+pycocoevalcap==1.1
+torch==1.5.0+cu101
+torchvision==0.6.0+cu101
+hickle==3.4.6
+waitress==1.4.3
+tensorflow_gpu==1.15.2
+wget==3.2
+scipy==1.3.2
+Keras==2.3.1
+Flask==1.1.1
+h5py==2.10.0
+pandas==0.25.3
+scikit_image==0.16.2
+matplotlib==3.1.1
